# RAG-Powered-Chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  netlify.toml  pyproject.toml
.github/workflows/: linter-check.yml  python-tests.yml  test-and-deploy.yml
app/: main.py  middleware.py  nicegui_patch.py
app/adapters/: chroma_database.py  cohere_agent.py  fake_database.py
app/agents/: __init__.py  cohere_agent.py  fake_agent.py
app/api/: database.py  dependencies.py  prompting.py
app/controller/: controller.py  helpers.py
app/controllers/: __init__.py
app/databases/: __init__.py  chroma_database.py  fake_database.py
app/interfaces/: __init__.py  agent.py  database.py  errors.py
app/ports/: __init__.py  errors.py
app/ui/: __init__.py  http_client.py  utils.py
app/ui/components/: __init__.py  chat.py  documents.py  layout.py
app/ui/pages/: __init__.py  chat.py  documents.py
app/ui/services/: __init__.py  activity.py  chat.py
app/usecases/: __init__.py
docs/: document_2.txt
rag_powered_chatbot/controller/: controller.py
rag_powered_chatbot/interfaces/: __init__.py  database.py
scripts/: executable.py
static/css/: styles.css
static/js/: base.js  chat.js  documents.js
templates/: base.html  chat.html  documents.html
tests/: confest.py  conftest.py  test_main.py  test_middleware.py
tests/api/: conftest.py  test_database.py  test_prompting.py
tests/controller/: test_controller.py  test_helpers.py
tests/data/: document_1.txt
tests/databases/: test_chroma_database.py  test_fake_database.py
tests/ui/: test_services.py
tests/usecases/: test_usecases.py
