[project]
name = "rag-powered-chatbot"
requires-python = ">=3.12"
version = "0.0.0"
dependencies = [
  "loguru",
  "click",
  "fastapi[standard]>=0.115.12",
  "python-dotenv>=1.1.0",
  "unstructured>=0.17.2",
  "langchain>=0.3.25",
  "langchain-community>=0.3.23",
  "langchain-cohere>=0.4.4",
  "onnxruntime==1.20.1; platform_system == 'Windows'",
  "chromadb>=0.6.3",
  "langchain-chroma>=0.2.3"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "Q"]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
  "pre-commit",
  "ruff",
  "pytest",
  "pytest-cov",
  "mypy",
  "pytest-asyncio>=1.0.0",
  "faker>=37.3.0"
]
